Update packages and fixed broken dependencies. Fixed spacing so experience can load in.

--- a/src/style/sections/_experience.scss
+++ b/src/style/sections/_experience.scss
@@ -2,7 +2,7 @@
 
     background-color: $white-color;
     color: $dark-blue-text;
-    margin-top: -8rem;
+    margin-top: 2rem;
   
     @include respond(tab-land) {
       margin-top: 0;
